--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="login_btn_login">Iniciar sesión</string>
     <string name="login_tv_signin">¿Aún no tienes cuenta?</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="api_url">http://192.168.1.77/rest/public/api</string>
+    <string name="api_url">http://192.168.100.21/api-bodegas/public/api</string>
     <string name="faqs_link">https://bodegapp.medisant.mx</string>
     <string name="terms_link">https://bodegapp.medisant.mx</string>
     <string name="privacy_link">https://bodegapp.medisant.mx</string>
@@ -13,6 +13,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="name">Nombre</string>
+    <string name="last_name">Apellidos</string>
+    <string name="address">Dirección</string>
+    <string name="phone">Teléfono</string>
+    <string name="confirm_password">Confirmar contraseña</string>
 
     <string-array name="plan_list">
         <item>1 mes</item>
