--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="support_phone">3319910156</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="image_url">https://bodegapp.medisant.mx/storage/</string>
     <string name="name">Nombre</string>
     <string name="last_name">Apellidos</string>
     <string name="address">Dirección</string>
